# soupernova

./: LICENSE.txt  README.md  pyproject.toml
src/soupernova/: __about__.py  __init__.py  blast.py
tests/: __init__.py
