[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soupernova"
dynamic = ["version"]
description = 'Make viewing stars a blast'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Matt Craig", email = "mattwcraig@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "astrowidgets",
  "anywidget",
  "ipywidgets"
]

[project.urls]
Documentation = "https://github.com/Matt Craig/soupernova#readme"
Issues = "https://github.com/Matt Craig/soupernova/issues"
Source = "https://github.com/Matt Craig/soupernova"

[tool.hatch.version]
path = "src/soupernova/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/soupernova tests}"

[tool.coverage.run]
source_pkgs = ["soupernova", "tests"]
branch = true
parallel = true
omit = [
  "src/soupernova/__about__.py",
]

[tool.coverage.paths]
soupernova = ["src/soupernova", "*/soupernova/src/soupernova"]
tests = ["tests", "*/soupernova/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
